# pleroma

./: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  backnative  build.rs  do_it.sh  docker-compose.yml  gen_make.sh  io.po  kernel.plmb  net.po  pleroma.json  run_tests.py  run_tests.sh  rust-toolchain.toml  todo
.cargo/: config.native.toml  config.toml  runner.sh
allo_src/: allo.cpp
archive/: CMakeLists.txt  Dockerfile  docker-compose-cluster.yml  docker-compose.yml  run_tests.py
archive/examples/: webserver.po  workingserver.po
archive/pleroma_src/: args.cpp  gc.cpp  gc.h  general_util.h  hylic.cpp  hylic.h  hylic_ast.cpp  hylic_ast.h  hylic_compex.h  hylic_eval.h  hylic_parse.cpp  hylic_parse.h  hylic_tokenizer.h  node_config.cpp  node_config.h  pleroma.cpp  pleroma.h  system.cpp  type_util.cpp
archive/pleroma_src/core/: ds.h  ffi.cpp  io.h  kernel.cpp  zeno.cpp  zeno.h
archive/shared_src/: protoloma.proto
archive/sys/: amoeba.plm  io.plm  monad.plm  net.plm
archive/tests/: 14-pure-fail-evar.plm
conf/: limine.cfg
examples/: .#object-inspector.po  b3.po  blah  helloworld.plm  helloworld.po  kernel.po  markmeister.po  object-inspector.po  test.plm  test.po  working_http.po
pleroma_src/: .#hylic_tokenizer.cpp  .#system.cpp  .hylic_tokenizer.cpp.swp  :w  args.cpp  args.h  general_util.cpp  general_util.h  hosted_irq.cpp  hosted_irq.h  hts.old  hylic.cpp  hylic.h  hylic_ast.cpp  hylic_ast.h  hylic_compex.h  hylic_compiler.cpp  hylic_compiler.h  hylic_eval.cpp  hylic_eval.h  hylic_parse.cpp  hylic_parse.h  hylic_tokenizer.cpp  hylic_tokenizer.h  hylic_typesolver.cpp  hylic_typesolver.h  hylic_vals.h  kernel.cpp  kernel.h  netcode.cpp  netcode.h  node_config.cpp  node_config.h  other.h  pleroma.cpp  pleroma.h  system.cpp  system.h  type_util.cpp  type_util.h
pleroma_src/core/: amoeba.cpp  amoeba.h  ds.cpp  ffi.cpp  ffi.h  fs.cpp  fs.h  io.cpp  io.h  kernel.cpp  kernel.h  net.cpp  net.h  zeno.cpp  zeno.h
shared_src/: protoloma.pb.cc  protoloma.pb.h  protoloma.proto
src/: ast.rs  bin_helpers.rs  codegen.rs  common.rs  compile.rs  fat.rs  ffi.rs  framebuffer.rs  hosted.rs  hylic_lalr.lalrpop  initrd.rs  interrupts.rs  io.rs  kernel.rs  lexer.rs  main.rs  memory.rs  metanoid.rs  monad.rs  multitasking.rs  native.rs  native_common.rs  native_util.rs  net.rs  node.rs  nodeman.rs  opcodes.rs  palloc.rs  parser.rs  pbin.rs  pci.rs  pnet.rs  sem.rs  system.rs  vm.rs  vm_core.rs  zeno.rs
src/architecture/x86_64/: cpu.rs
src/drivers/: mod.rs  virtio.rs  virtio_blk.rs  virtio_net.rs
src/filesys/: chunkchunk.rs  ext2.rs  ustar.rs
sys/: amoeba.plm  ds.po  fs.po  io.plm  kernel.plm  kernel.plmb  monad.plm  monad.po  net.po  nodeman.plm  nodeman.plmb  zeno.plm
test_examples/: basic_entity.plm
tests/: 01-funcret.po  03-funcret-fail.po  04-assmt-fail.plm  09-async-self-call.plm  10-other-call.plm  11-module-call-1.po  12-pure.plm  13-pure-fail.plm  15-match.po  2-assmt.po  5-assmt-members.po  6-new-entity.po  7-funccall.po  8-self-funccall-fail.po  helpermod.plm  ping-pong.po
