[package]
name = "pleroma"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = { path = "./third_party/limine", optional = true }
spin = { version = "0.9", optional = true }
x86_64 = { version = "0.14.10", optional = true }
pic8259 = { version = "0.10.1", optional = true }
pc-keyboard = { version = "0.5.0", optional = true}
lalrpop-util = { version = "0.19", features = ["lexer"], optional = true }
regex = { version = "1", optional = true }
enet = { version = "0.3.0", optional = true }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"], optional = true }

[features]
default = ["hosted"]
native = ["limine", "spin", "x86_64", "pic8259", "pc-keyboard"]
hosted = ["enet", "regex", "lalrpop", "lalrpop-util"]
